--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,14 @@
-<div class="main w-full">
-    <div class="header ml-10 text-7xl text-light-grey mt-10 w-1/2">
-        <h1><span class="text-4xl">BEATS</span> <br> SOLO <span class="text-black"><pre>3</pre></span></h1>
+<div class="main w-full mt-10 " id="about">
+
+    <div class="header ml-4 md:ml-10 text-4xl md:text-7xl text-light-grey w-1/2">
+        <h1><span class="text-lg md:text-4xl">BEATS</span> <br> SOLO <span class="text-black"><pre>3</pre></span></h1>
     </div>
     
-    <div class="main-container w-full  flex justify-end">
+    <div class="main-container w-full  md:flex justify-end">
     
     
-            <div class="list text-light-grey text-3xl pr-28 ">
-                <ul>
+            <div class="list text-center md:text-left text-light-grey text-lg md:text-xl lg:text-3xl md:ml-10 md:pr-28 ml-3">
+                <ul class="">
                     <li class="p-4">UP TO 40 HOURS OF LISTENING TIME</li>
                     <li class="p-4">TAKE CALLS AND TAKE CONTROL</li>
                     <li class="p-4">SUPPORTS SPATIAL AUDIO*</li>
@@ -19,14 +20,15 @@
                 </ul>
             </div>
     
-            <div class="image-container pr-28 drop-shadow-lg bg-transparent">
+            <div class="items-center flex justify-center w-imagetwo-m h-imagetwo-m lg:w-imagetwo-xl lg:h-imagetwo-xl 
+            image-container lg:pr-28 drop-shadow-lg bg-transparent">
                 <img class="rotate-15 bg-transparent"
-                src="assets/beats2.png" alt="solo" width="490" height="490"/>
+                src="assets/beats2.png" alt="solo"/>
             </div>
     
     </div>    
 
-    <div class="text ml-4 mr-4 text-center mt-20 text-4xl text-light-grey font-bold">
+    <div class="text ml-4 mr-4 text-center mt-20 text-2xl md:text-4xl text-light-grey font-bold">
         <p>Beats Solo3 Wireless on-ear headphones immerse you in rich, award-winning sound, everywhere you want to go.</p>
     </div>
 
