--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -1,7 +1,7 @@
-<div class="main bg-bg-final">
+<div class="main bg-bg-final w-full" id="address">
     <div class="address flex justify-between bg-bg-final">
         <div class="text bg-transparent pl-10">
-            <p class="bg-transparent text-xl text-white">8600 Hayden Place Culver City,<br><span class="mt-10 bg-transparent">CA 90232 <br>USA</span></p>
+            <p class="bg-transparent text-base md:text-xl text-white">8600 Hayden Place Culver City,<br><span class="mt-10 bg-transparent">CA 90232 <br>USA</span></p>
         </div>
         <div class="socials flex justify-around bg-transparent pr-10 pt-2">
             <img class="fb bg-transparent px-2" src="assets/fb.png" alt="" >
@@ -10,7 +10,7 @@
         </div>
     </div>
     
-    <div class="logo bg-bg-final flex justify-end py-5 pr-10">
+    <div class="logo bg-bg-final flex justify-center md:justify-end py-5 md:pr-10">
         <img class="bg-transparent" src="assets/beats logo.png" alt="" width="38px" height="38px">
     </div>
 </div>
