--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -1,9 +1,10 @@
-<div class="main bg-bg-final pl-10 mt-28 w-full pb-20">
+<div class="main bg-bg-final pl-10 mt-10 md:mt-28 w-full pb-20" id="us">
 
-<div class="main-containerml-10 flex justify-between bg-transparent">
+<div class="main-containerml-10 md:flex justify-between bg-transparent">
        
-        <div class="things text-white text-3xl bg-transparent w-1/2">
-            <h1 class="text-4xl text-white pt-28 pb-5 bg-bg-final w-1/2">WHAT'S IN THE BOX ?</h1>
+        <div class=" things text-center md:text-left text-white 
+        text-lg md:text-2xl bg-transparent md:w-1/2">
+            <h1 class="text-xl md:text-3xl text-white pt-12 md:pt-28 pb-5 bg-bg-final md:w-1/2">WHAT'S IN THE BOX ?</h1>
             <ul class="bg-transparent">
                 <li class="py-5 bg-transparent">Beats Solo3 Wireless headphones</li>
                 <li class="py-5 bg-transparent">Carrying Case</li>
