--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,18 @@
-<div class="main-container flex justify-around w-full mt-20">
+<div class="main-container flex justify-around w-full mt-20" id="home">
 
     <!-- <div class="shape rounded-superlarge relative mt-80 pr-20 ml-big-shape
     w-shape-big h-shape-big bg-shape-grey rotate-49"></div> -->
 
     <div class="content-container flex justify-around bg-transparent">
-        <div class="image bg-transparent pr-96  hover:scale-125">
-            <img class="rotate-15 bg-transparent"
-            src="assets/beats.png" alt="Logo" width="595" height="876"/>
+        <div class="image bg-transparent md:pr-96  lg:hover:scale-125 ">
+            <img class="w-image h-image rotate-15 bg-transparent 
+            md:w-image-m md:h-image-m lg:w-image-xl lg:h-image-xl"
+            src="assets/beats.png" alt="Logo"/>
         </div>
 
-        <div class="main-line text-white absolute bg-transparent pl-96 pt-48">
-            <h1 class="text-10xl font-bold bg-transparent">Redi<span class="text-black bg-transparent">fined</span><br>Bass</h1>
+        <div class="main-line text-white absolute bg-transparent ">
+            <h1 class="text-8xl items-center sm:items-center md:text-9xl lg:text-10xl 
+            font-bold bg-transparent pt-28 md:pl-96 md:pt-48">Rede<span class="text-black bg-transparent">fined</span><br>Bass</h1>
         </div>
 
     </div>
