added responsiveness more changes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,8 +20,9 @@
                 </ul>
             </div>
     
-            <div class="items-center flex justify-center w-imagetwo-m h-imagetwo-m lg:w-imagetwo-xl lg:h-imagetwo-xl 
-            image-container lg:pr-28 drop-shadow-lg bg-transparent">
+            <div class=" w-imagetwo h-imagetwo ml-24
+            md:w-imagetwo-m md:h-imagetwo-m lg:w-imagetwo-xl lg:h-imagetwo-xl 
+            lg:pr-28 drop-shadow-lg bg-transparent">
                 <img class="rotate-15 bg-transparent"
                 src="assets/beats2.png" alt="solo"/>
             </div>
