--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,13 +2,14 @@
   <div class="logo w-1/2 ml-10aboout ml-4 md:ml-10">
     <img src="assets/logo-navbar.png" alt="Logo" width="38" height="38"/>
 
-    <!-- <span class="text-3xl cursor-pointer ml-1 mt-2 md:hidden block">
-      <img src="assets/menu.png" alt="" width="28px" height="28px" (click)="showNavitems()">
-    </span> -->
+ 
+      <!-- <span  class="text-3xl cursor-pointer ml-1 mt-2 md:hidden block">
+        <img src="assets/menu.png" alt="" width="28px" height="28px" (click)="showNavitems()">
+      </span> -->
 
   </div>
 
-  <div class="nav-contents-main   w-1/2 ">
+  <div  class="nav-contents-main   ml-4 w-1/2 ">
     <div class="nav-contents-child mt-3 md:flex md:justify-around text-light-grey ml-4">
       <p class="text-light-grey cursor-pointer" href="#about">About Product</p>
       <p class="text-light-grey cursor-pointer" href="#us">What's in the box?</p>
@@ -17,3 +18,5 @@
     </div>
   </div>
 </div>
+
+<!-- *ngIf="showItems" -->
