--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -1,4 +1,4 @@
-<div class="main bg-bg-final md:pl-10 mt-10 md:mt-28 w-full pb-20" id="us">
+<div class="main bg-bg-final md:pl-10 mt-10 md:mt-28  w-screen pb-20 md:w-full" id="us">
 
 <div class="main-containerml-10 md:flex justify-between bg-transparent">
        
