--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,8 +11,8 @@
         </div>
 
         <div class="main-line text-white absolute bg-transparent ">
-            <h1 class="text-8xl items-center sm:items-center md:text-9xl lg:text-10xl 
-            font-bold bg-transparent pt-28 md:pl-96 md:pt-48">Rede<span class="text-black bg-transparent">fined</span><br>Bass</h1>
+            <h1 class="text-8xl items-center sm:items-center sm:text-8xl md:text-9xl lg:text-10xl 
+            font-bold bg-transparent pt-28 md:pr-10 md:pl-52 md:pt-48">Rede<span class="text-black bg-transparent">fined</span><br>Bass</h1>
         </div>
 
     </div>
