--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 
   </div>
 
-  <div  class="nav-contents-main   ml-4 w-1/2 ">
+  <div  class="nav-contents-main   ml-4 w-1/2 md:mr-12">
     <div class="nav-contents-child mt-3 md:flex md:justify-around text-light-grey ml-4">
       <p class="text-light-grey cursor-pointer" href="#about">About Product</p>
       <p class="text-light-grey cursor-pointer" href="#us">What's in the box?</p>
